--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
 	<section id="bio">
 		<h3>About</h3>
 		<div>
-			<p>When I was 13, my dad and I made bar ends and seat post clamps on the lathe and mill. I took them to my local bike shop to trade for other parts, and gave some to my friends. That got me interested in fabrication, welding roll cages, doing general chassis work, making furniture, and general welding. While in college, I was lucky enough to get a welding job at a BMX company. I learned welding frame sub-assemblies, handlebars, seat posts, general frame fabrication, and machining.</p>
-			<p>I entered the workforce but after a few years  I realized that I wasn’t suited to being in an office all day. I wanted to make bicycles again. I began making frames for friends and family.</p>
-			<p>I currently make frames, forks, stems, and components in Los Angeles. I prefer building town/city bikes, porteurs, and randonneuse. That said, I'll build just about anything as long as its main purpose is for having fun.</p>
+			<p>My first taste of bicycle fabrication began I was 13. My dad and I would make bar ends and seat post clamps on the mill and lathe, and I took them to my local bike shop to trade for other parts. Taking those pieces of metal and turning them into something that could actually be used on a bicycle really got me interested in fabrication. From there, I would make anything involving metalwork. This included everything from roll cages to furniture. Once I was in college, I was lucky enough to get a job welding for a BMX company. I learned by welding sub-assemblies for frames, handlebars, seat posts, general frame fabrication, and machining.</p>
+
+			<p>After college I entered the workforce as an environmental analyst, but after several years I realized that I wasn’t suited to being in an office all day. I wanted to make bicycles again. I began making frames for friends and family during nights and weekends, and paying the bills by building satellites during the day.</p>
+
+			<p>I currently make frames, forks, stems, racks, cable hangers, and the occasional friction shifter in Los Angeles. I prefer building town/city, porteur, and randonneur bikes. That said, I'm interested in building just about anything as long as its main purpose is for having fun.</p>
 		</div>
 	</section>
 	<section id="social">
