Add contact button in #social

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<img src="assets/build/images/bike1.png">
 	</section>
 	<section id="buy">
-		<a href="mailto:jared@jeromecycles.com?subject=Yo, I want a frameset">Order a Frameset</a>
+		<a href="mailto:jared@jeromecycles.com?subject=Yo, I want a frameset" class="button">Order a Frameset</a>
 		<p>Starts at $2,000</p>
 	</section>
 	<section id="bio">
@@ -32,6 +32,7 @@
 		</div>
 	</section>
 	<section id="social">
+		<a href="mailto:jared@jeromecycles.com" class="button">Lets Talk</a>
 		<ul>
 			<li><a href="http://instagram.com/jaredjerome">
 				<svg width="20" height="20" viewBox="0 0 512 512">
