--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Jerome Cycles &times; Bicycles Frames Made in Los Angeles</title>
+	<title>Jerome Cycles &times; Bicycles Made in Los Angeles</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -18,8 +18,41 @@
 		<img src="assets/build/images/bike1.png">
 	</section>
 	<section id="buy">
-		<a href="mailto:jared@jeromecycles.com?subject=Yo, I want a frameset" class="button">Order a Frameset</a>
-		<p>Starts at $2,000</p>
+		<a href="mailto:jared@jeromecycles.com?subject=Yo, I want a frameset" class="button">Order Parts</a>
+
+		<ul>
+			<li>
+				<span class="product">Complete Bike</span>
+				<span class="price"><small>Starts At</small> $3,000</span>
+				<span class="includes">1 Color Powdercoat</span>
+			</li>
+			<li>
+				<span class="product">Frame &amp; Fork</span>
+				<span class="price"><small>Starts at</small> $2,000</span>
+				<span class="includes">1 Color Powdercoat</span>
+			</li>
+			<li>
+				<span class="product">Fork</span>
+				<span class="price"><small>Starts at </small>$400</span>
+				<span class="includes">1 Color Powdercoat</span>
+			</li>
+			<li>
+				<span class="product">Stem</span>
+				<span class="price"><small>Starts at</small> $250</span>
+				<span class="includes">Nickel Plated or Powdercoated</span>
+			</li>
+			<li>
+				<span class="product">Racks</span>
+				<span class="price"><small>Starts at</small> $300</span>
+				<span class="includes">Nickel Plated or Powdercoated</span>
+			</li>
+			<li>
+				<span class="product">Cable Hangers</span>
+				<span class="price"><small>Starts at</small> $50</span>
+				<span class="includes">Nickel Plated</span>
+			</li>
+		</ul>
+
 	</section>
 	<section id="bio">
 		<h3>About</h3>
