Remove logo options and set final logo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<section id="title">
-		<h1 id="logo1">Jerome Cycles</h1>
+		<h1 id="logo">Jerome Cycles</h1>
 	</section>
 	<section id="hero">
 		<img src="assets/build/images/bike1.png">
