Add more photos. Create a photogrid.

--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
 	<section id="title">
 		<h1 id="logo">Jerome Cycles</h1>
 	</section>
-	<section id="hero">
-		<img src="assets/build/images/bike1.png">
+	<section id="hero" data-layout="121">
+		<img src="assets/build/images/slideshow.1.png">
+		<img src="assets/build/images/slideshow.2.png">
+		<img src="assets/build/images/slideshow.4.png">
+		<img src="assets/build/images/slideshow.3.png">
 	</section>
 	<section id="buy">
 		<a href="mailto:jared@jeromecycles.com?subject=Yo, I want a frameset" class="button">Order Parts</a>
@@ -84,6 +87,7 @@
 			</a></li>
 		</ul>
 	</section>
-
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" ></script>
+	<script src="assets/build/js/site.min.js"></script>
 </body>
 </html>
