Change About to About Jared

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 	</section>
 	<section id="bio">
-		<h3>About</h3>
+		<h3>About Jared</h3>
 		<div>
 			<p>My first taste of bicycle fabrication began I was 13. My dad and I would make bar ends and seat post clamps on the mill and lathe, and I took them to my local bike shop to trade for other parts. Taking those pieces of metal and turning them into something that could actually be used on a bicycle really got me interested in fabrication. From there, I would make anything involving metalwork. This included everything from roll cages to furniture. Once I was in college, I was lucky enough to get a job welding for a BMX company. I learned by welding sub-assemblies for frames, handlebars, seat posts, general frame fabrication, and machining.</p>
 
