--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 	<section id="title">
 		<h1 id="logo">Jerome Cycles</h1>
 	</section>
-	<section id="hero" data-layout="121">
-		<img src="assets/build/images/slideshow.1.png">
-		<img src="assets/build/images/slideshow.2.png">
-		<img src="assets/build/images/slideshow.4.png">
-		<img src="assets/build/images/slideshow.3.png">
+	<section id="hero">
+		<ul class="rsslides">
+			<li><img src="assets/build/images/slideshow.1.jpg"></li>
+			<li><img src="assets/build/images/slideshow.2.jpg"></li>
+			<li><img src="assets/build/images/slideshow.4.jpg"></li>
+			<li><img src="assets/build/images/slideshow.3.jpg"></li>
+		</ul>
 	</section>
 	<section id="buy">
 		<a href="mailto:jared@jeromecycles.com?subject=Yo, I want a frameset" class="button">Order Parts</a>
