Add border to header

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 </head>
 <body>
 	<section id="title">
-		<h1 id="logo">Jerome Cycles</h1>
+		<div class="wrap">
+			<h1 id="logo">Jerome Cycles</h1>
+		</div>
 	</section>
 	<section id="hero">
 		<ul class="rsslides">
