--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	<section id="bio">
 		<h3>About Jared</h3>
 		<div>
-			<p>My first taste of bicycle fabrication began I was 13. My dad and I would make bar ends and seat post clamps on the mill and lathe, and I took them to my local bike shop to trade for other parts. Taking those pieces of metal and turning them into something that could actually be used on a bicycle really got me interested in fabrication. From there, I would make anything involving metalwork. This included everything from roll cages to furniture. Once I was in college, I was lucky enough to get a job welding for a BMX company. I learned by welding sub-assemblies for frames, handlebars, seat posts, general frame fabrication, and machining.</p>
+			<p>My first taste of bicycle fabrication began when I was 13. My dad and I would make bar ends and seat post clamps on the mill and lathe, and I took them to my local bike shop to trade for other parts. Taking those pieces of metal and turning them into something that could actually be used on a bicycle really got me interested in fabrication. From there, I would make anything involving metalwork. This included everything from roll cages to furniture. Once I was in college, I was lucky enough to get a job welding for a BMX company. I learned by welding sub-assemblies for frames, handlebars and seat posts, and performing general frame fabrication and machining.</p>
 
 			<p>After college I entered the workforce as an environmental analyst, but after several years I realized that I wasn’t suited to being in an office all day. I wanted to make bicycles again. I began making frames for friends and family during nights and weekends, and paying the bills by building satellites during the day.</p>
 
@@ -72,7 +72,7 @@
 		</div>
 	</section>
 	<section id="social">
-		<a href="mailto:jared@jeromecycles.com" class="button">Lets Talk</a>
+		<a href="mailto:jared@jeromecycles.com" class="button">Let's Talk</a>
 		<ul>
 			<li><a href="http://instagram.com/jaredjerome">
 				<svg width="20" height="20" viewBox="0 0 512 512">
