Update email subject line

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		</ul>
 	</section>
 	<section id="buy">
-		<a href="mailto:jared@jeromecycles.com?subject=Yo, I want a frameset" class="button">Order Parts</a>
+		<a href="mailto:jared@jeromecycles.com?subject=I want to place an order" class="button">Order Parts</a>
 
 		<ul>
 			<li>
